# llm_from_scratch

./: README.md
02_Transformer_xdg/: main.py  transformer.py
03_BERT/: bert_usage.py
04_GPT/: gpt.py  gpt_with_kv_cache.py
06_ Llama2_llm/: llmam2.py
07_MoE/: moe.py  moe_shared_expert.py  moe_topk_routing.py
08_attention_mha_gqa_mla/: flash_attention.py  linear_attention.py
A0_frontier_model_training/SmolLM3/smollm/vision/smolvlm2/: README.md  pyproject.toml
A0_frontier_model_training/SmolLM3/smollm/vision/smolvlm2/scripts/: create_mixture.py  mixture_checker.py  sort.py  zero1.json
A0_frontier_model_training/SmolLM3/smollm/vision/smolvlm2/scripts/mixtures/: llava_onevision_config.yaml  llava_onevision_config_qual.yaml  onevision_less_mammoth.yaml  onevision_less_mammoth_more_videos.yaml  onevision_less_mammoth_more_videos_balanced.yaml  onevision_no_mammoth_more_image_balanced.yaml
A0_frontier_model_training/SmolLM3/smollm/vision/smolvlm2/scripts/train/: multinode25.sh  multinode26-256M.sh  multinode26-500M.sh
A0_frontier_model_training/SmolLM3/smollm/vision/smolvlm2/smolvlm/: constants.py  conversation.py  mm_utils.py  utils.py
A0_frontier_model_training/SmolLM3/smollm/vision/smolvlm2/smolvlm/datasets/: builder.py  dataset.py  dataset_clip_sampling.py
A0_frontier_model_training/SmolLM3/smollm/vision/smolvlm2/smolvlm/model/: modeling_smollmm.py  modeling_smolvlm.py  processing_smollmm.py  varlen_packing.py
A0_frontier_model_training/SmolLM3/smollm/vision/smolvlm2/smolvlm/train/: args.py  smolvlm_trainer.py  train.py  train_mem.py
sft/: sft.py  (+1 more)
(+128 files in other folders)
